# normflow-plugin

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  config.yaml  config_8x8.yaml  jupyter.Dockerfile  pyproject.toml  startscript.sh
.github/workflows/: lint.yml  pytest.yaml  sqaaas.yaml
src/itwinai/plugins/normflow/: CONTRIBUTING.md  README.md  config.yaml  mlflow-setup.sh  normflow_module.py  normflowcore.py  scalar_psd_affine.py  startscript.sh
src/itwinai/plugins/normflow/src/: _normflowcore.py
src/itwinai/plugins/normflow/src/lib/: readme.md
